# Serverless-HostScanner

./: .gitignore  README.md  cloudflared.yaml  metallb-config.yaml  stack.yaml
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
istio-ingress/: ingress-gateway.yml
keycloak/: keycloak-db.yaml  keycloak-deployment.yaml  keycloak-pv.yaml
mariadb/: mariadb-deployment.yaml  (+1 more)
webserver/: .coverage  .env.dev  .env.test  Dockerfile  Makefile  REPORT_GENERATION.md  alembic.ini  celery-deployment.yaml  config.py  conftest.py  docker-compose.yml  nginx-configmap.yaml  pyproject.toml  pytest.ini  reports-pv.yaml  smtp-secret.yaml  test_timezone.py  webserver-configmap.yaml  webserver-deployment.yaml
webserver/alembic/: env.py
webserver/alembic/versions/: 0cd8c40c12de_.py
webserver/app/: config.py  exceptions.py  log.py  main.py  server.py  tasks.py
webserver/app/api/: __init__.py  dependencies.py
webserver/app/api/routes/: admin.py  auth.py  dashboard.py  finding.py  report.py  scan.py  target.py  test.py
webserver/app/database/: base_class.py  db.py  session.py
webserver/app/models/: __init__.py  finding.py  report.py  scan.py  target.py  user.py
webserver/app/schemas/: finding.py  report.py  scan.py  target.py  user.py
webserver/app/templates/: report_base.html  report_csv.j2  report_json.j2
webserver/app/utils/: email.py  timezone.py
webserver/tests/: README.md  __init__.py  test_admin_routes.py  test_auth_routes.py  test_dashboard_routes.py  test_finding_routes.py  test_report_routes.py  test_scan_routes.py  test_target_routes.py
(+87 files in other folders)
