[tool.poetry]
name = "webserver-serverless"
version = "0.1.0"
description = "Deps for the webserver"
authors = ["Andrei <andrei_liviu.labau@stud.acs.upb.ro>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
python-dotenv = "^1.1.0"
pydantic-settings = "^2.9.1"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
pymysql = "^1.1.1"
fastapi_keycloak = "^1.1.0"
python-multipart = "^0.0.20"
celery = {extras = ["redis"], version = "^5.5.2"}
pydantic = {extras = ["email"], version = "^2.11.4"}
httpx = "^0.28.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"
pytest-cov = "^6.1.1"
pytest-env = "^1.1.5"
pytest-asyncio = "^1.0.0"
cryptography = "^45.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
